# alina_practice

./: .gitignore  README.md  bot.py  example.env  index.py  main.py  pyproject.toml  ruff.toml  test.csv  test.py
data/: brief.md  brief2.md  chunks_debug.txt
index/: index.pkl
src/: chunker.py  config.py  db.py  embedder.py  indexer.py  prompt.txt  rag_agent.py  vector_store.py
