[project]
name = "alina-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.14.3",
    "langchain>=1.3.11",
    "langchain-classic>=1.0.8",
    "langchain-community>=0.4.2",
    "langchain-ollama>=1.1.0",
    "langchain-text-splitters>=1.1.2",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pymupdf>=1.28.0",
    "pytelegrambotapi>=4.34.0",
    "python-docx>=1.2.0",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
    "requests>=2.34.2",
    "rich>=15.0.0",
    "unstructured>=0.23.1",
]

[dependency-groups]
dev = [
    "ruff>=0.15.20",
]
